<resources>
    <string name="app_name">Kaizen</string>
    <string name="home">Home</string>
    <string name="hotel">Hotel</string>
    <string name="room_service">Room Service</string>
    <string name="guest_service">Guest Service</string>
    <string name="bar_dinning"><![CDATA[Bar & Dinning]]></string>
    <string name="spa_salon"><![CDATA[Spa & Salon]]></string>
    <string name="more">More</string>
    <string name="cart">Cart</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="room_number">101</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="room_number_empty">Enter Room Number</string>
    <string name="password_empty">Enter Password</string>
    <string name="location_rationale">This app needs access to your location to know where you are.</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_arabic">ردود الفعل</string>
    <string name="check_out">Check Out</string>
    <string name="check_out_arabic">الدفع</string>
    <string name="collect_tray">Collect Tray</string>
    <string name="collect_tray_arabic">اجمع الدرج</string>
    <string name="internet">Internet</string>
    <string name="internet_arabic">الإنترنت</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_date_time"><![CDATA[Enter Date & Time]]></string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="send_request">Send Request</string>
    <string name="thank_you">Thank you!</string>
    <string name="your_request_has_been_successfully_submitted">your request has been successfully submitted</string>
    <string name="close">Close</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_cart_arabic">أضف إلى السلة</string>
    <string name="unable_to_add_to_cart">Unable to add item to cart</string>
    <string name="item_add_to_cart">Add Item to Foodcart</string>
    <string name="_1">1</string>
    <string name="no_items_available_arabic">لا توجد عناصر متاحة</string>
    <string name="no_items_available">No items available</string>
    <string name="remove_from_cart">Remove Item from cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order">Order</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="success">Success</string>
    <string name="success_desc">Your order has been placed. We\'ll see you soon!</string>
    <string name="emergency">Need Help?</string>
    <string name="emergency_arabic">تحتاج مساعدة؟</string>
    <string name="prayer_timings">Prayer Timings</string>
    <string name="prayer_timings_arabic">أوقات الصلاة</string>
    <string name="loading">Loading…</string>
    <string name="emergency_desc">Your response has been registered our representative will contact you soon</string>
    <string name="enter_time">Enter Time</string>
    <string name="count">Count : %s</string>
    <string name="count_arabic">عد : %s</string>
    <string name="pay">PLACE ORDER</string>
    <string name="total">Total Amount: SR (%s)</string>
    <string name="pay_arabic">دفع (%s)</string>
    <string name="service_time">Service Time : %s</string>
    <string name="service_time_arabic">وقت الخدمة : %s</string>
    <string name="sr">(SR %s)</string>
    <string name="reservation">Reservation</string>
    <string name="french">French</string>
    <string name="urdu">Urdu</string>
    <string name="turkish">Turkish</string>
    <string name="book_sallon">Booking Salon</string>
    <string name="Add">Item Added to cart</string>
    <string name="alarm_clock">Alarm</string>
    <string name="alarm_clock_arabic">منبه</string>
    <string name="select_language">Select Language</string>
    <string name="review">Review and Order</string>

    <string-array name="collect_tray">
        <item>Immidiate</item>
        <item>15-30Minutes</item>
        <item>1Hour</item>
        <item>2Hours</item>
    </string-array>

    <string-array name="language">
        <item>English</item>
        <item>Arabic</item>
        <item>French</item>
        <item>Urdu</item>
        <item>Turkish</item>

    </string-array>
</resources>
