<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:paddingLeft="@dimen/margin16dp"
            android:paddingRight="@dimen/margin16dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="8">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_orange"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/home"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_blue"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/hotel"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_blue"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/room_service"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_blue"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/guest_service"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_blue"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/bar_dinning"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_blue"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/spa_salon"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_blue"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_rectangle_blue"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/cart"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorAccent" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>