<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin16dp"
    android:background="@android:color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/thank_you"
        android:textColor="@color/colorAccent"
        android:textSize="88sp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/tv_thanks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin16dp"
        android:text="@string/your_request_has_been_successfully_submitted"
        android:textSize="36sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_description"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin24dp"
        android:drawableLeft="@drawable/ic_close"
        android:drawablePadding="@dimen/margin8dp"
        android:drawableStart="@drawable/ic_close"
        android:text="@string/close"
        android:theme="@style/ButtonThemeAccent" />

</RelativeLayout>