<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    tools:context=".activities.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cv_room_no"
            android:src="@drawable/ic_logo" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_room_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp">

            <EditText
                android:id="@+id/et_room_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/room_number"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/margin8dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_room_no"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/margin8dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="4dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/margin8dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin8dp"
            android:padding="@dimen/margin16dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:theme="@style/ButtonThemeAccent" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


</LinearLayout>