<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin8dp"
            android:layout_weight="3">

            <android.support.v4.view.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.design.widget.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:tabBackground="@drawable/ic_tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp" />

            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_left_chevron" />

            <ImageView
                android:id="@+id/iv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_right_chevron" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin8dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_emergency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin4dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:padding="@dimen/margin8dp"
                    android:text="@string/emergency"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/ll_weather"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin4dp"
                    android:background="@color/blue"
                    android:orientation="vertical"
                    android:padding="@dimen/margin8dp">

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/white"
                        android:textSize="48sp"
                        android:textStyle="bold"
                        tools:text="12:30 PM" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/margin4dp"
                        android:background="@color/colorAccent" />


                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin4dp"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        tools:text="Hyderabad" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="30" />

                        <ImageView
                            android:id="@+id/iv_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center" />

                        <TextView
                            android:id="@+id/tv_high_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_low_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@android:color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        tools:text="Humidity" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/margin8dp"
                        android:background="@color/colorAccent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_marginTop="@dimen/margin4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_tomorrow_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/tomorrow"
                            android:textColor="@android:color/white"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/iv_tomorrow_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/tv_tomorrow_high_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/tv_tomorrow_low_temperature"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textColor="@android:color/white" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_prayer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin4dp"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:padding="@dimen/margin8dp"
                    android:text="@string/prayer_timings"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/margin4dp"
                    android:background="@android:color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_place_holder" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin4dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:scaleType="fitXY"
                android:src="@drawable/ic_buttons">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_feed_back"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin4dp"
                        android:layout_marginRight="@dimen/margin4dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:drawableLeft="@drawable/ic_feedback"
                        android:drawableStart="@drawable/ic_feedback"
                        android:gravity="center"
                        android:padding="@dimen/margin16dp"
                        android:text="@string/feedback"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_check_out"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/margin4dp"
                        android:layout_marginStart="@dimen/margin4dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:drawableLeft="@drawable/ic_alarm"
                        android:drawableStart="@drawable/ic_alarm"
                        android:gravity="center"
                        android:padding="@dimen/margin16dp"
                        android:text="@string/check_out"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/tv_alarm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/margin4dp"
                        android:layout_marginStart="@dimen/margin4dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:drawableLeft="@drawable/ic_alarm"
                        android:drawableStart="@drawable/ic_alarm"
                        android:gravity="center"
                        android:padding="@dimen/margin16dp"
                        android:text="@string/alarm_clock"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                       />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin4dp">

                    <TextView
                        android:id="@+id/tv_collect_tray"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="@dimen/margin4dp"
                        android:layout_marginRight="@dimen/margin4dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:drawableLeft="@drawable/ic_delete"
                        android:drawableStart="@drawable/ic_delete"
                        android:gravity="center"
                        android:padding="@dimen/margin16dp"
                        android:text="@string/collect_tray"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_internet"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/margin4dp"
                        android:layout_marginStart="@dimen/margin4dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:drawableLeft="@drawable/ic_internet"
                        android:drawableStart="@drawable/ic_internet"
                        android:gravity="center"
                        android:padding="@dimen/margin16dp"
                        android:text="@string/internet"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:visibility="gone"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin4dp"
                    android:background="@color/blue"
                    android:drawableEnd="@drawable/ic_menu_down"
                    android:drawableLeft="@drawable/ic_translet"
                    android:drawablePadding="@dimen/margin8dp"
                    android:drawableRight="@drawable/ic_menu_down"
                    android:drawableStart="@drawable/ic_translet"
                    android:padding="@dimen/margin16dp"
                    android:text="@string/english"
                    android:textSize="16sp"
                    android:theme="@style/SpinnerItemStyle"
                    />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
